@startuml

title 6 WINDOWS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

class GdiScreen {}
class GdiLedStrips {}
class GdiJoystick {}
class GdiButton {}
class GdiTm1637 {}    
class GdiLcd2004 {}

GdiScreen *-- GdiLedStrips
GdiScreen *-- GdiJoystick
GdiScreen *-- GdiButton 
GdiScreen *-- GdiTm1637
GdiScreen *-- GdiLcd2004 

@enduml
